# FlightGearVSG

./: .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  README.md
package/: CMakeLists.txt  make-base-package.noarch.sh  org.flightgear.FlightGear.desktop.in
package/mac/: FlightGear.icns
package/windows/: InstallConfig.iss.in
src/: CMakeLists.txt
src/AIModel/: AIAircraft.cxx  AIAircraft.hxx  AIBallistic.cxx  AIBallistic.hxx  AIBase.cxx  AIBase.hxx  AIBaseAircraft.cxx  AIBaseAircraft.hxx  AICarrier.cxx  AICarrier.hxx  AIConstants.hxx  AIEscort.cxx  AIEscort.hxx  AIFlightPlan.cxx  AIFlightPlan.hxx  AIFlightPlanCreate.cxx  AIFlightPlanCreateCruise.cxx  AIFlightPlanCreatePushBack.cxx  AIGroundVehicle.cxx  AIGroundVehicle.hxx  AIManager.cxx  AIManager.hxx  AIMultiplayer.cxx  AIMultiplayer.hxx  AINotifications.hxx  AIShip.cxx  AIShip.hxx  AIStatic.cxx  AIStatic.hxx  AIStorm.cxx  AIStorm.hxx  AISwiftAircraft.cpp  AISwiftAircraft.h  AITanker.cxx  AITanker.hxx  AIThermal.cxx  AIThermal.hxx  AIWingman.cxx  AIWingman.hxx  CMakeLists.txt  (+8 more)
src/ATC/: ATCController.cxx  ATCController.hxx  ATISEncoder.cxx  ATISEncoder.hxx  AirportGroundRadar.cxx  AirportGroundRadar.hxx  ApproachController.cxx  ApproachController.hxx  CMakeLists.txt  CommStation.cxx  CommStation.hxx  CurrentWeatherATISInformationProvider.cxx  CurrentWeatherATISInformationProvider.hxx  EnRouteController.cxx  EnRouteController.hxx  GroundController.cxx  GroundController.hxx  MetarPropertiesATISInformationProvider.cxx  MetarPropertiesATISInformationProvider.hxx  QuadTree.hxx  StartupController.cxx  StartupController.hxx  TowerController.cxx  TowerController.hxx  atc_mgr.cxx  atc_mgr.hxx  trafficcontrol.cxx  trafficcontrol.hxx
src/Add-ons/: Addon.cxx  Addon.hxx  AddonManager.cxx  AddonManager.hxx  AddonMetadataParser.cxx  AddonMetadataParser.hxx  AddonResourceProvider.cxx  AddonResourceProvider.hxx  AddonVersion.cxx  AddonVersion.hxx  addon_fwd.hxx  contacts.cxx  contacts.hxx  exceptions.cxx  exceptions.hxx  pointer_traits.hxx
src/Aircraft/: AircraftPerformance.cxx  AircraftPerformance.hxx  CMakeLists.txt  FlightHistory.cxx  FlightHistory.hxx  continuous.cxx  continuous.hxx  controls.cxx  controls.hxx  flightrecorder.cxx  flightrecorder.hxx  initialstate.cxx  initialstate.hxx  replay-internal.cxx  replay-internal.hxx  replay.cxx  replay.hxx
src/Airports/: AirportBuilder.cxx  AirportBuilder.hxx  CMakeLists.txt  airport.cxx  airport.hxx  airportdynamicsmanager.cxx  airportdynamicsmanager.hxx  airports_fwd.hxx  apt_loader.cxx  apt_loader.hxx  calc_loc.cxx  dynamicloader.cxx  dynamicloader.hxx  dynamics.cxx  dynamics.hxx  gnnode.cxx  gnnode.hxx  groundnetwork.cxx  groundnetwork.hxx  parking.cxx  parking.hxx  pavement.cxx  pavement.hxx  runwaybase.cxx  runwaybase.hxx  runwayprefloader.cxx  runwayprefloader.hxx  runwayprefs.cxx  runwayprefs.hxx  runways.cxx  runways.hxx  sidstar.cxx  sidstar.hxx  xmlloader.cxx  xmlloader.hxx
src/Autopilot/: CMakeLists.txt  analogcomponent.cxx  analogcomponent.hxx  autopilot.cxx  autopilot.hxx  autopilotgroup.cxx  autopilotgroup.hxx  component.cxx  digitalcomponent.hxx  digitalfilter.cxx  flipflop.cxx  flipflop.hxx  functor.hxx  logic.hxx  pidcontroller.cxx  pidcontroller.hxx  pisimplecontroller.cxx  pisimplecontroller.hxx  predictor.cxx  predictor.hxx  route_mgr.cxx  route_mgr.hxx
src/Canvas/: CMakeLists.txt  FGCanvasSystemAdapter.cxx  FGCanvasSystemAdapter.hxx  canvas_mgr.cxx  canvas_mgr.hxx  gui_mgr.cxx  gui_mgr.hxx  texture_replace.cxx  texture_replace.hxx
src/EmbeddedResources/: CMakeLists.txt  fgrcc.cxx  fgrcc.hxx
src/Environment/: CMakeLists.txt  atmosphere.cxx  atmosphere.hxx  climate.cxx  climate.hxx  environment.cxx  environment.hxx  environment_ctrl.cxx  environment_ctrl.hxx  environment_mgr.cxx  environment_mgr.hxx  ephemeris.cxx  ephemeris.hxx  fgclouds.cxx  fgclouds.hxx  fgmetar.cxx  fgmetar.hxx  gravity.cxx  gravity.hxx  magvarmanager.cxx  magvarmanager.hxx  metarairportfilter.cxx  metarairportfilter.hxx  metarproperties.cxx  metarproperties.hxx  precipitation_mgr.cxx  precipitation_mgr.hxx  presets.cxx  presets.hxx  realwx_ctrl.cxx  realwx_ctrl.hxx  ridge_lift.cxx  ridge_lift.hxx  terrainsampler.cxx  terrainsampler.hxx
src/FDM/: CMakeLists.txt  NullFDM.hxx  TankProperties.hxx  UFO.cxx  UFO.hxx  fdm_shell.cxx  fdm_shell.hxx  flight.cxx  flight.hxx  flightProperties.hxx  groundcache.cxx  groundcache.hxx  ls_matrix.h
src/GUI/: AddOnsController.cxx  AddOnsController.hxx  AddonsModel.hxx  AircraftCompatibility.cxx  AircraftCompatibility.hxx  AircraftItemModel.cxx  AircraftItemModel.hxx  AircraftProxyModel.cxx  AircraftProxyModel.hxx  AirportDiagram.cxx  AirportDiagram.hxx  BaseDiagram.hxx  CMakeLists.txt  CanvasWidget.cxx  CanvasWidget.hxx  CarrierDiagram.hxx  CarriersLocationModel.cxx  CarriersLocationModel.hxx  CatalogListModel.hxx  CocoaFileDialog.hxx  CocoaFileDialog.mm  CocoaHelpers.h  CocoaHelpers.mm  CocoaHelpers_private.h  CocoaMouseCursor.hxx  CocoaMouseCursor.mm  DefaultAircraftLocator.cxx  DefaultAircraftLocator.hxx  DialogStateController.hxx  FGCocoaMenuBar.hxx  FGCocoaMenuBar.mm  FGColor.hxx  FGNasalMenuBar.cxx  FGNasalMenuBar.hxx  FGPUICompatDialog.cxx  FGPUICompatDialog.hxx  FGQmlInstance.hxx  FGQmlPropertyNode.hxx  FGWindowsMenuBar.cxx  FGWindowsMenuBar.hxx  (+93 more)
src/Include/: cmdargs.h  config_cmake.h.in  flightgearBuildId.h.cmake-in  flightgear_precompile.h
src/Input/: CMakeLists.txt  FGButton.cxx  FGButton.hxx  FGCommonInput.cxx  FGCommonInput.hxx  FGDeviceConfigurationMap.cxx  FGDeviceConfigurationMap.hxx  FGEventInput.cxx  FGEventInput.hxx  FGEventInput_private.hxx  FGHIDEventInput.cxx  FGHIDEventInput.hxx  FGHIDUsage.cxx  FGHIDUsage.hxx  FGJoystickInput.cxx  FGJoystickInput.hxx  FGKeyboardInput.cxx  FGKeyboardInput.hxx  FGLinuxEventInput.cxx  FGLinuxEventInput.hxx  FGMouseInput.cxx  FGMouseInput.hxx  fgjs.cxx  input.cxx  input.hxx  js_demo.cxx  jsinput.cxx  jsinput.h  jssuper.cxx  jssuper.h
src/Instrumentation/: AbstractInstrument.cxx  AbstractInstrument.hxx  CMakeLists.txt  adf.cxx  adf.hxx  airspeed_indicator.cxx  (+60 more)
utils/: CMakeLists.txt
(+760 files in other folders)
